# AutoAPE-NAS

PC-DARTS/: README.md  pyproject.toml
PC-DARTS/configs/: pcdarts_cifar.yaml  pcdarts_cifar_search.yaml
PC-DARTS/core/: test.py  train.py  train_search.py
PC-DARTS/core/modules/: __init__.py  dataset.py  genotypes.py  models.py  models_search.py  operations.py
TextNAS/: README.md  eval_arc_sst2.sh  eval_arc_sst5.sh  main.py  pyproject.toml  sst5_macro_search_multi.sh
TextNAS/core/child_model/: ops.py  textnas_child.py
